fixing overflow causing language dropdown issue

--- a/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
+++ b/ui.frontend/src/main/webpack/global/styles/components/header/top-navigation.scss
@@ -294,7 +294,6 @@ html[lang="ar"] {
 
     .links {
       li {
-        overflow: hidden;
 
         a {
           cursor: pointer;
